feat(vote): add feature vote and pagination post

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -10,4 +10,12 @@
       margin-bottom: 10px;
     }
   }
+  &-posts{
+    &-pagination {
+      width: 20%;
+      margin: 0 auto;
+      margin-bottom: 20px;
+      padding: 15px;
+    }
+  }
 }
