--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -17,6 +17,9 @@
     padding: 0 5px;
 
     &-field {
+      .field_with_errors {
+        width: 100%;
+      }
       &-input{
         width: 100%;
       }
@@ -24,6 +27,22 @@
     &-btn {
       width: 100%;
       font-weight: bold;
+    }
+  }
+}
+
+.c-post__content{
+  &-text-information {
+    &-voted-status{
+      background-color: white;
+    }
+    &-actions {
+      a {
+        margin-left: 10px;
+        &:hover {
+          background-color: lightblue;
+        }
+      }
     }
   }
 }
